// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When Puzzle Owl gets mounted and triggers close -> SliderPuzzle gets unmounted 1`] = `
<div id="app">
  <h1>Welcome to the PUZZLE world!</h1>
  <!--v-if-->
  <slider-puzzle-stub puzzleobj="[object Object]"></slider-puzzle-stub>
</div>
`;

exports[`When Puzzle Owl gets mounted and triggers close -> SliderPuzzle gets unmounted 2`] = `
<div id="app">
  <h1>Welcome to the PUZZLE world!</h1>
  <puzzles-stub></puzzles-stub>
  <!--v-if-->
</div>
`;
